# EZLookdevTools

./: .gitignore  LICENSE  README.md  ldtenvset.sh
docs/images/: katanaPrmanInteractiveFilters.mov  mayaEZSurfacing_create.mov  mayaEZSurfacing_export.mov
plugins/gaffer/boxes/: LDTCenterToOrigin.gfr  LDTShaderBall.grf  LDTShaderBall2.gfr  LDTShowMetadata.grf  LDTSurfacingSets.grf  LDTTurnTable.gfr
plugins/katana/templates/: turntable.katana
plugins/maya/: CMakeLists.txt
plugins/nuke/plugins/: EZAovCorrect.gizmo  EZLigthgroupsContactSheet.gizmo  EZLigthgroupsCorrect.gizmo  init.py
python/ldt/: __init__.py  context.py
python/ldtcommon/: __init__.py
python/ldtconfig/: materials.json
python/ldtgaffer/: __init__.py
python/ldtkatana/: __init__.py  utils.py
python/ldtmaya/: __init__.py
python/ldtplugins/: katanasurfacingprojects.yapsy-plugin  mayasurfacingprojects.yapsy-plugin  mayatextureimport.yapsy-plugin  mayatools.yapsy-plugin  txmake.yapsy-plugin
python/ldtplugins/katanasurfacingprojects/: __init__.py
python/ldtplugins/mayasurfacingprojects/: __init__.py
python/ldtprman/: __init__.py
python/ldttextures/: __init__.py
python/ldtui/: __init__.py  qtutils.py
python/ldtutils/: __init__.py
resources/patterns/: 1024x1024_Texel_Density_Texture_1.tx  1024x1024_Texel_Density_Texture_2.tx  1024x1024_Texel_Density_Texture_5.tx  2048x2048_Texel_Density_Texture_1.tx  2048x2048_Texel_Density_Texture_2.tx  2048x2048_Texel_Density_Texture_5.tx  512x512_Texel_Density_Texture_1.tx  512x512_Texel_Density_Texture_2.tx  512x512_Texel_Density_Texture_5.tx
(+48 files in other folders)
